--- a/src/Pages/Home/CenterContent/LastProjects/styles.css
+++ b/src/Pages/Home/CenterContent/LastProjects/styles.css
@@ -8,10 +8,12 @@
 
 .last-projects-container .last-projects__content {
     display: flex;
+    flex-direction: column;
     align-items: center;
     margin-top: 12px;
+    padding-right: 95px;
 }
 
 .last-projects-container .last-projects__content > *:not(:first-child) {
-    margin-left: 25px;
+    margin-top: 17px;
 }
