--- a/src/Pages/Home/CenterContent/Certificates/styles.css
+++ b/src/Pages/Home/CenterContent/Certificates/styles.css
@@ -1,4 +1,4 @@
-.last-projects-container .last-projects__header {
+.certificates-container .certificates__header {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -6,14 +6,14 @@
     padding-bottom: 12px;
 }
 
-.last-projects-container .last-projects__content {
+.certificates-container .certificates__content {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 12px;
-    padding-right: 80px;
+    padding-right: 95px;
 }
 
-.last-projects-container .last-projects__content > *:not(:first-child) {
+.certificates-container .certificates__content > *:not(:first-child) {
     margin-top: 17px;
 }
