--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     margin: 20px auto;
-    padding: 25px 0px;
+    padding-top: 45px;
 }
 
 .home-container .home-container__content .home-container__content__bottom .logo-container {
