--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -1,22 +1,23 @@
 .home-container {
     background: #242424;
     min-height: 100vh;
+    color: #fff;
 }
 
 .home-container .home-container__content {
     max-width: 950px;
     margin: 0 auto;
+    padding: 100px 0px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .home-container .home-container__content .home-container__content__bottom {
     display: flex;
     align-items: center;
     margin: 20px auto;
-    padding-top: 45px;
 }
 
 .home-container .home-container__content .home-container__content__bottom .logo-container {
