--- a/src/Components/Certificate/styles.css
+++ b/src/Components/Certificate/styles.css
@@ -3,6 +3,11 @@ a.certificate-container {
     align-items: center;
     background: #1d1d1d;
     border-radius: 10px;
-    padding: 15px 10px;
+    padding: 15px 20px;
     text-decoration: none;
+}
+
+.certificate-right {
+    margin-left: 20px;
+    word-break: break-word;
 }
